fixing some copy paste issues

--- a/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial_content.tex
@@ -383,7 +383,7 @@ function move_slide(delta, weight) {
             mu = mu_prime 
         }
     }
-}
+} # end function
 \end{lstlisting}
 \end{snugshade*}}
 There are a few things to consider in the function \cl{move\_slide}.
@@ -425,7 +425,7 @@ function move_scale(lambda, weight) {
             mu = mu_prime 
         }
     }
-}
+} # end function
 \end{lstlisting}
 \end{snugshade*}}
 As before, this move has a tuning parameter called \cl{lambda}.
