small typo in archery tutorial

--- a/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial_content.tex
@@ -379,7 +379,7 @@ for (rep in 1:reps){
     
     if ( (rep % printgen) == 0 ) {
         # Write the samples to a file
-        write(rep,p,"\n",file="archery_MH.log",append=TRUE)
+        write(rep,mu,"\n",file="archery_MH.log",append=TRUE)
         # Print the samples to the screen
         print(rep,mu)
     }
