small typo in TEFBD

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -869,7 +869,7 @@ Because the Mk model is a generalization of the Mk model, we will initialize our
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-Q_morpho := fnJC(2)
+Q_morpho <- fnJC(2)
 
 \end{lstlisting}
 \end{snugshade*}}
