reverting FBD tutorial for current version

--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -723,7 +723,7 @@ We will monitor this tree instead of \cl{fbd\_tree}.
 
 {\tt \begin{snugshade*}
 \begin{lstlisting}
-pruned_tree := fnPruneTree(fbd_tree, prune=v("Ursus_abstrusus","Parictis_montanus"))
+pruned_tree := fnPruneTree(fbd_tree, pruneTaxa=v(taxa[17],taxa[20]))
 \end{lstlisting}
 \end{snugshade*}}
 
