--- a/tutorial_TeX/RB_Rev_Tutorial/RB_Rev_Tutorial.tex
+++ b/tutorial_TeX/RB_Rev_Tutorial/RB_Rev_Tutorial.tex
@@ -10,7 +10,7 @@
 \thispagestyle{plain}
 \begin{center}
 
-\textbf{\LARGE Statistical Inference using RevBayes}\\\vspace{2mm}
+\textbf{\LARGE Statistical Inference using \RevBayes}\\\vspace{2mm}
 \textbf{\it{\Large Basic introduction to Rev \& MCMC}}\\\vspace{2mm}
 \vspace{1cm}
 {\Large Sebastian H{\"o}hna}
@@ -19,7 +19,7 @@
 
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
-\input{RB_Basics_Tutorial_content}
+\input{RB_Rev_Tutorial_content}
 
 Version dated: \today
 
