Getting the Rev intro tutorial ready.

--- a/tutorial_TeX/RB_Intro_Tutorial/RB_Intro_Tutorial.tex
+++ b/tutorial_TeX/RB_Intro_Tutorial/RB_Intro_Tutorial.tex
@@ -20,6 +20,7 @@
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
 \input{RB_Intro_Tutorial_content}
+\input{RB_Intro_Tutorial_exercises}
 
 Version dated: \today
 
