A little bit of work on the binomial MCMC tutorial

--- a/tutorial_TeX/RB_MCMC_Binomial_Tutorial/RB_MCMC_Binomial_Tutorial.tex
+++ b/tutorial_TeX/RB_MCMC_Binomial_Tutorial/RB_MCMC_Binomial_Tutorial.tex
@@ -20,6 +20,8 @@
 \def \ResourcePath {./}
 \def \GlobalResourcePath {../}
 \input{RB_MCMC_Binomial_Tutorial_content}
+\newpage
+\input{RB_MCMC_Binomial_Tutorial_exercises}
 
 Version dated: \today
 
