--- a/tutorial_TeX/RB_MCMC_Binomial_Tutorial/RB_MCMC_Binomial_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Binomial_Tutorial/RB_MCMC_Binomial_Tutorial_content.tex
@@ -213,13 +213,7 @@ Here, we actually check if we want to store the value during this iteration.
 \end{snugshade*}}
 
 
-\subsection{Exercise 1}
-
-\begin{enumerate}[label=\textnormal{Step \arabic*)}]
-	\item Write and execute this script (there is also an example file called \emph{Binomial\_MH\_algorithm.Rev}).
-	\item The \texttt{.log} file will contain samples from the posterior distribution of the model! Open the file in \Tracer to learn about various features of the posterior distribution, for example: the posterior mean or the 95\% credible interval.
-\end{enumerate}
-Pretty awesome, right?
+\subsection{Visualizing the samples of an MCMC simulation}
 
 Below we show an example of the obtained output in \Tracer.
 Specifically, Figure~\ref{fig:mcmc_samples} shows the sample trace (left) and the estimated posterior distribution of $p$ (right).
@@ -370,29 +364,6 @@ It will be very useful for you to understand these moves.
 
 \pagebreak
 
-
-\subsection{Exercise 2}
-
-\begin{enumerate}[label=\textnormal{Step \arabic*)}]
-	\item Rewrite your previous script to include these three different moves now.
-	\item Then, run the script to estimate the posterior distribution of $p$ again.
-	\item Look at the output in \Tracer.
-	\item Are the distributions, mean and credible interval the same?
-	\item Use only a single move and set \cl{printgen=1}. Which move has the best ESS?
-	\item How does the ESS change if you use a \cl{delta=10} for the sliding-window move?
-	\item Add to each move a counter variable that counts how often the move was accepted. For example:
-{\tt \begin{snugshade*}
-\begin{lstlisting}    
-        if (u < R){
-            # Accept the proposal
-            p <- p_prime
-            ++num_sliding_move_accepted
-        } \end{lstlisting}
-\end{snugshade*}}
-	\item Have a look at how the acceptance rate changes for different values of the tuning parameters.
-\end{enumerate}
-
-
 However, this MCMC algorithm is \emph{very} specific to our binomial model and thus hard to extend (also it's pretty inefficient!).
 
 
@@ -475,27 +446,6 @@ Do the posterior distributions for the parameter $p$ look the same as the ones w
 
 Hopefully, you'll note that this \Rev model is substantially simpler and easier to read than the MH algorithm script we began with.
 Perhaps more importantly, this \Rev analysis is \emph{orders of magnitude} faster than our own script, because it makes use of extremely efficient probability calculations built-in to \RevBayes (rather than the ones we hacked together in our own algorithm).
-
-\subsection{Exercise 3}
-
-\begin{enumerate}[label=\textnormal{Step \arabic*)}]
-	\item Run the built-in MCMC and compare the results to your own MCMC. Are the posterior estimates the same? Are the acceptance rates of the moves similar?
-	\item Next, add a second move \cl{moves[2] = mvScale(p,lambda=0.1,tune=true,weight=1.0)} just after the first one.
-	\item Run the analysis again and compare the output.
-	\item Finally, run a pre-burnin using \cl{analysis.burnin(generations=10000,tuningInterval=200)} just before you call \cl{analysis.run(100000)}. This will auto-tune the tuning parameters (\EG \cl{delta} and \cl{lambda}) so that the acceptance ratio is between 0.4 and 0.5.
-	\item What are the tuned values for \cl{delta} and \cl{lambda}? Did the auto-tuning increase the ESS?
-\end{enumerate}
-
-\subsection{Exercise 4}
-Play around with various parts of the model to develop on intuition for both the Bayesian model and the MCMC algorithm.
-For example, how does the posterior distribution change as you increase the number of coin flips (say, increase both the number of flips and the number of heads by an order of magnitude)?
-How does the estimated posterior distribution change if you change the prior model parameters, $\alpha$ and $\beta$ (\IE is the model prior sensitive)?
-Does the prior sensitivity depend on the sample size?
-Are the posterior estimates sensitive to the length of the MCMC?
-Do you think this MCMC has been run sufficiently long, or should you run it longer?
-
-
-
 
 
 \bibliographystyle{sysbio}
